--- a/app/src/main/res/layout/activity_dang_nhap_gmail.xml
+++ b/app/src/main/res/layout/activity_dang_nhap_gmail.xml
@@ -1,42 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     android:layout_height="match_parent">
-
-    <EditText
-        android:id="@+id/editTextUsernameDN"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_height="300dp"
+        android:src="@drawable/ic_launcher_foreground"
+
+        />
+    <EditText
+        android:background="@drawable/custtomedit"
+        android:id="@+id/editTextUsernameDN"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
         android:hint="Username"
         android:padding="10dp" />
 
     <EditText
+        android:background="@drawable/custtomedit"
         android:id="@+id/editTextPasswordDN"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
         android:layout_below="@+id/editTextUsernameDN"
         android:layout_marginTop="20dp"
         android:hint="Password"
-
-        android:padding="10dp" />
+        android:inputType="textPassword"
+        />
 
     <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editTextPasswordDN"
         android:layout_marginTop="20dp"
         android:text="Login"
+android:backgroundTint="#70cbff"
         android:padding="10dp" />
 
     <Button
         android:id="@+id/buttonRegister"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonLogin"
         android:layout_marginTop="20dp"
         android:text="Đăng ký"
+        android:textColor="#000000"
+        android:backgroundTint="#FFC107"
         android:padding="10dp" />
 
-</RelativeLayout>
+</LinearLayout>
