--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,19 +8,19 @@
     android:orientation="vertical"
     android:gravity="center"
     >
-<!--    <ImageView-->
-<!--        android:layout_width="100dp"-->
-<!--        android:layout_height="100dp"-->
-<!--        android:src="@drawable/firebase_logo"-->
-<!--        android:layout_marginBottom="110dp"-->
-<!--        />-->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:src="@drawable/ic_launcher_foreground"
+
+        />
     <Button
         android:id="@+id/btnemail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login With Email"
         android:layout_margin="10dp"
-        android:background="@drawable/custtombutton"
+        android:backgroundTint="#70cbff"
         />
     <Button
         android:id="@+id/btnOtp"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:text="Login With Phone Number"
         android:layout_margin="10dp"
-        android:background="@drawable/custtombutton"
+        android:backgroundTint="#FF9800"
         />
 
 </LinearLayout>
