--- a/app/src/main/res/layout/dialog_edit_danhsach.xml
+++ b/app/src/main/res/layout/dialog_edit_danhsach.xml
@@ -1,67 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="HardcodedText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:layout_marginStart="30dp"
+    android:layout_marginEnd="30dp"
+    android:background="#EBFFD5"
+    android:layout_gravity="center_vertical"
+    android:orientation="vertical">
+    <TextView
 
-    <EditText
-        android:id="@+id/editTextName"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="Name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/editTextStudentId"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="Student ID"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextName" />
-
-    <EditText
-        android:id="@+id/editTextStudentDtb"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="Student diem tung binh"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextStudentId" />
-
+        android:text="Sửa Xe"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:textSize="24sp"/>
     <ImageView
-        android:id="@+id/img_avatar"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextStudentDtb" />
+        android:id="@+id/imgEdit"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginTop="12dp"
 
-    <Button
-        android:id="@+id/buttonChooseImage"
-        android:layout_width="0dp"
+        />
+    <EditText
+        android:id="@+id/edtTenXe"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Choose Image"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_avatar" />
 
-    <Button
-        android:id="@+id/buttonSave"
-        android:layout_width="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="22dp"
+        android:padding="10dp"
+        android:hint="Nhập Tên Xe"
+        android:layout_marginBottom="22dp"
+        android:inputType="text"
+        android:importantForAutofill="no"
+        />
+    <EditText
+        android:id="@+id/edtGia"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Save"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buttonChooseImage" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:padding="10dp"
+        android:hint="Nhập Giá Xe"
+        android:layout_marginBottom="22dp"
+        android:inputType="number"
+        android:importantForAutofill="no"
+        />
+    <Spinner
+        android:id="@+id/spinnerLoai"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnUpdate"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:textAllCaps="true"
+
+            android:layout_gravity="center"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:layout_marginTop="5dp"
+            app:backgroundTint="#70cbff"
+            android:text="Sửa"
+            android:textColor="#575757"/>
+        <Button
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            app:backgroundTint="#937E7E"
+            android:textColor="#FFFFFF"
+            android:layout_marginStart="20dp"
+            android:text="Thoát"
+            android:layout_marginTop="5dp"
+            android:id="@+id/btnCancel"
+            android:textAllCaps="true"/>
+    </LinearLayout>
+
+</LinearLayout>
